--- a/buy-and-sell-backend/package.json
+++ b/buy-and-sell-backend/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@babel/runtime": "^7.23.2",
     "@hapi/hapi": "^21.3.2"
   },
   "devDependencies": {
