--- a/buy-and-sell-backend/package.json
+++ b/buy-and-sell-backend/package.json
@@ -17,6 +17,7 @@
     "@babel/core": "^7.23.2",
     "@babel/node": "^7.22.19",
     "@babel/plugin-transform-runtime": "^7.23.2",
-    "@babel/preset-env": "^7.23.2"
+    "@babel/preset-env": "^7.23.2",
+    "nodemon": "^3.0.1"
   }
 }
