--- a/buy-and-sell-backend/package.json
+++ b/buy-and-sell-backend/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "@babel/runtime": "^7.23.2",
+    "@hapi/boom": "^10.0.1",
     "@hapi/hapi": "^21.3.2"
   },
   "devDependencies": {
