--- a/buy-and-sell-backend/package.json
+++ b/buy-and-sell-backend/package.json
@@ -14,6 +14,7 @@
     "@babel/runtime": "^7.23.2",
     "@hapi/boom": "^10.0.1",
     "@hapi/hapi": "^21.3.2",
+    "firebase-admin": "^11.11.0",
     "mysql": "^2.18.1",
     "uuid": "^9.0.1"
   },
